Various types from Andrew Savige.
git-svn-id: http://svn.pugscode.org/pugs@23246 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -316,7 +316,7 @@ explicitly flatten it in any of these ways:
     push @foo, @$bar;
     push @foo, $bar[];
 
-(The C<*> in list context doesn't change the call semantics as is
+(The C<*> in list context doesn't change the call semantics as it
 does in scalar context.)  Note that these three forms also allow you
 to specify list context on assignment:
 
