Clarified that ::<> doesn't work to hide spaces in the name.
git-svn-id: http://svn.pugscode.org/pugs@23248 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -582,12 +582,14 @@ name search.  That is, the following are all identical in meaning:
     ::<$foo>
 
 That is, each of them scans lexical scopes outward, and then the current package scope
-(though the latter is then disallowed when "strict" is in effect).
+(though the package scope is then disallowed when "strict" is in effect).
 
 As a result of these rules, you can write any arbitrary variable name as either of:
 
-    $::<!@#$#@>
-    ::<$!@#$#@>
+    $::{'!@#$#@'}
+    ::{'$!@#$#@'}
+
+You can also use the C<< ::<> >> form as long as there are no spaces in the name.
 
 =item *
 
