--- a/doc/trunk/design/syn/S11.pod
+++ b/doc/trunk/design/syn/S11.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 16 Nov 2005
+  Last Modified: 22 Feb 2006
   Number: 11
-  Version: 6
+  Version: 7
 
 =head1 Overview
 
@@ -36,6 +36,9 @@ two basic declaration syntaxes:
     module Bar {...}	# block is in module Bar
 
 The first form is allowed only as the first statement in the file.
+
+A named module declaration can occur as part of an expression, just like
+named subroutine declarations.
 
 Since there are no barewords in Perl 6, module names must be predeclared,
 or use the sigil-like C<::ModuleName> syntax.  The C<::> prefix does not
