--- a/doc/trunk/design/syn/S12.pod
+++ b/doc/trunk/design/syn/S12.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 25 Jan 2006
+  Last Modified: 22 Feb 2006
   Number: 12
-  Version: 8
+  Version: 9
 
 =head1 Overview
 
@@ -54,6 +54,9 @@ time as the body of a method of the metaclass, which is responsible
 for interpreting the keywords of the class definition.  (And since a
 class is also a module, it also handles any module-oriented keywords.
 You can export subs from a class at "use" time, for instance.)
+
+A named class declaration can occur as part of an expression, just like
+named subroutine declarations.
 
 Classes are primarily for instance management, not code reuse.
 Consider using C<roles> when you simply want to factor out
