--- a/doc/trunk/design/syn/S12.pod
+++ b/doc/trunk/design/syn/S12.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 22 Feb 2006
+  Last Modified: 23 Feb 2006
   Number: 12
-  Version: 9
+  Version: 10
 
 =head1 Overview
 
@@ -310,7 +310,7 @@ which as a singleton object knows your package, and can function as a more tradi
     our $count;
     method ^count { return $count }
 
-Such an I<metaclass method> is always delegated to C<.meta> just as method like
+Such a I<metaclass method> is always delegated to C<.meta> just as method like
 C<.does> are, so it's possible to call this as C<Dog.count> or C<$dog.count>.
 However, best practice is probably to call such a class method as C<Dog.^count>
 or C<$dog.^count> to make it clear that it's in its own namespace separate
