--- a/doc/trunk/design/syn/S11.pod
+++ b/doc/trunk/design/syn/S11.pod
@@ -77,12 +77,33 @@ Module traits are set using C<is>:
 
 Exportation is now done by trait declaration on the exportable item:
 
-                                               # Tagset...
+    module Foo;                                # Tagset...
     sub foo is export(:DEFAULT)         {...}  #  :DEFAULT, :ALL
     sub bar is export(:DEFAULT :others) {...}  #  :DEFAULT, :ALL, :others
     sub baz is export(:MANDATORY)       {...}  #  (always exported)
     sub bop is export                   {...}  #  :ALL
     sub qux is export(:others)          {...}  #  :ALL, :others
+
+Declarations marked as C<is export> are bound into the C<EXPORT> inner
+modules, with their tagsets as inner module names within it.  For example,
+the C<sub bar> above will bind as C<&Foo::EXPORT::DEFAULT::bar>,
+C<&Foo::EXPORT::ALL::bar>, and C<&Foo::EXPORT::others::bar>.
+
+Inner modules automatically add their export list to modules in its
+all outer scope:
+
+    module Foo {
+        sub foo is export {...}
+        module Bar {
+            sub bar is export {...}
+            module Baz {
+                sub baz is export {...}
+            }
+        }
+    }
+
+The C<Foo> module will export C<&foo>, C<&bar> and C<&baz> by default;
+calling C<Foo::Bar.import> will import C<&bar> and C<&baz> at runtime.
 
 =head1 Compile-time Importation
 
@@ -101,6 +122,12 @@ That's pretty much equivalent to:
     my &common ::= &Sense::common;
     our @horse ::= @Sense::horse;
     $*warming  ::= $Sense::warming;
+
+It is also possible to re-export the imported symbols:
+
+    use Sense :EXPORT;                  # import and re-export the defaults
+    use Sense <common> :EXPORT;         # import "common" and re-export it
+    use Sense <common> :EXPORT<@horse>; # import "common" but exports "@horse"
 
 In the absence of a specific scoping specified by the caller, the module
 may also specify a different scoping default by use of C<:MY> or C<:OUR>
