--- a/doc/trunk/design/syn/S11.pod
+++ b/doc/trunk/design/syn/S11.pod
@@ -14,7 +14,7 @@ Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
   Last Modified: 22 Feb 2006
   Number: 11
-  Version: 7
+  Version: 8
 
 =head1 Overview
 
@@ -89,8 +89,8 @@ modules, with their tagsets as inner module names within it.  For example,
 the C<sub bar> above will bind as C<&Foo::EXPORT::DEFAULT::bar>,
 C<&Foo::EXPORT::ALL::bar>, and C<&Foo::EXPORT::others::bar>.
 
-Inner modules automatically add their export list to modules in its
-all outer scope:
+Inner modules automatically add their export list to modules in all their
+outer scopes:
 
     module Foo {
         sub foo is export {...}
