* S11: fix another typo. Typo`R`us. * S12: remove the remaining "eigenclass" misnomer when it means "metaclass".
git-svn-id: http://svn.pugscode.org/pugs@23261 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S11.pod
+++ b/doc/trunk/design/syn/S11.pod
@@ -295,7 +295,7 @@ version number or other literal:
     6;
     "Coolness, dude!";
 
-it runs Perl 6 in "lax" mode, without strictures or warnings, since obvously
+it runs Perl 6 in "lax" mode, without strictures or warnings, since obviously
 a bare literal in a void context I<ought> to have produced a warning.
 (Invoking perl with C<-e6> has the same effect.)
 
